--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,7 +7,7 @@
         "use": "@vercel/node"
       },
       {
-        "src": "src/**/*",
+        "src": "**/*",
         "use": "@vercel/static"
       }
     ],
@@ -15,3 +15,5 @@
       { "src": "/(.*)", "dest": "/" }
     ]
   }
+
+  
