--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,18 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "**/*",
-        "use": "@vercel/static"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
-  }
-
-  
+        {
+            "src": "/(.*)",
+            "dest": "/server.js"
+        }
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
+}
